--- a/fs-check-remediation/fs_remediate.yml
+++ b/fs-check-remediation/fs_remediate.yml
@@ -5,12 +5,12 @@
 - hosts: all 
   tasks:
      - name: Collect only facts about hardware
-       anible.builtin.setup:
+       ansible.builtin.setup:
          gather_subset:
            - 'hardware'
 
      - name: Test for available disk space
-       anible.builtin.setup: filter=ansible_mounts
+       ansible.builtin.setup: filter=ansible_mounts
        
      - name: Resize the logical volume, adding +10% of free space in VG if and only if Disk space has reached 90% threshold
        community.general.lvol:
