Fixing issue on playbook

--- a/snow_post_worknote.yml
+++ b/snow_post_worknote.yml
@@ -6,10 +6,10 @@
     - name: Posting the message on SNOW
       servicenow.itsm.incident:
         instance:
-          host: snow_instance
-          username: snow_user
-          password: snow_pass
+          host: "{{ snow_instance }}"
+          username: "{{ snow_user }}"
+          password: "{{ snow_pass }}"
         
-        number: snow_inc_number
+        number: "{{ snow_inc_number }}"
         other:
-          work_notes: post_message
+          work_notes: "{{ post_message }}"
