--- a/snow_close_inc.yml
+++ b/snow_close_inc.yml
@@ -16,5 +16,5 @@
           password: "{{ snow_pass }}"
         number: "{{ snow_inc_number }}"
         state: closed
-        close_code: "successful"
+        close_code: "Solved (Permanently)"
         close_notes: "Resolution automation applied successful"
