--- a/snow_close_inc.yml
+++ b/snow_close_inc.yml
@@ -18,3 +18,6 @@
         state: closed
         close_code: "Solved (Permanently)"
         close_notes: "Resolution automation applied successful"
+        other:
+          resolution_code: "Known error"
+          resolution_notes: "Resolution automation applied successful"
