Trying another way to resolve

--- a/snow_resolve_inc.yml
+++ b/snow_resolve_inc.yml
@@ -16,5 +16,6 @@
           password: "{{ snow_pass }}"
         number: "{{ snow_inc_number }}"
         state: resolved
-        close_code: "Solved (Permanently)"
-        close_notes: "Resolution automation applied successful by AAP"
+        other:
+          close_code: "Known error"
+          close_notes: "Resolution automation applied successful by AAP"
